# SilentStream

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md  build.rs  build_installer.bat  build_release.bat  build_release_debug.bat  install.bat  installer_script.ps1  package_release.ps1  print_lib.bat  setup.iss  setup.ps1
scripts/: process_icons.py
src/: audio_engine.rs  main.rs
